@@ -1,4 +1,4 @@
-#,,,,,,,,,,,,,,,,,,,,,,,,,,,"generated_by='OpenQuake engine 3.16.0-git86ec35bbf9', start_date='2022-11-07T18:12:31', checksum=3006823909, kind='mean', investigation_time=50.0, imt='PGA'"
+#,,,,,,,,,,,,,,,,,,,,,,,,,,,"generated_by='OpenQuake engine 3.19.0-gita24fca17ce', start_date='2023-11-14T10:56:48', checksum=151698325, kind='mean', investigation_time=50.0, imt='PGA'"
 lon,lat,depth,poe-0.0100000,poe-0.0121153,poe-0.0146780,poe-0.0177828,poe-0.0215443,poe-0.0261016,poe-0.0316228,poe-0.0383119,poe-0.0464159,poe-0.0562341,poe-0.0681292,poe-0.0825404,poe-0.1000000,poe-0.1211528,poe-0.1467799,poe-0.1778279,poe-0.2154435,poe-0.2610157,poe-0.3162278,poe-0.3831187,poe-0.4641589,poe-0.5623413,poe-0.6812921,poe-0.8254042,poe-1.0000000
-83.00000,29.00000,0.00000,9.997469E-01,9.991091E-01,9.972188E-01,9.923790E-01,9.817368E-01,9.615883E-01,9.284214E-01,8.802877E-01,8.177046E-01,7.432984E-01,6.609937E-01,5.748786E-01,4.885320E-01,4.047948E-01,3.261683E-01,2.547491E-01,1.922615E-01,1.397423E-01,9.759475E-02,6.513438E-02,4.128002E-02,2.464879E-02,1.368206E-02,6.927943E-03,3.152142E-03
-84.00000,28.00000,0.00000,9.991308E-01,9.976394E-01,9.940189E-01,9.860332E-01,9.701807E-01,9.420295E-01,8.972573E-01,8.333691E-01,7.511900E-01,6.549845E-01,5.517532E-01,4.491109E-01,3.535092E-01,2.695362E-01,1.995134E-01,1.436280E-01,1.008558E-01,6.928964E-02,4.658905E-02,3.070638E-02,1.973058E-02,1.218950E-02,7.160947E-03,3.934325E-03,2.005671E-03
+83.00000,29.00000,0.00000,9.998079E-01,9.992406E-01,9.974636E-01,9.927854E-01,9.823601E-01,9.624976E-01,9.297119E-01,8.820594E-01,8.199538E-01,7.459870E-01,6.639931E-01,5.779949E-01,4.915521E-01,4.076264E-01,3.287335E-01,2.570553E-01,1.943365E-01,1.416482E-01,9.922677E-02,6.652784E-02,4.244995E-02,2.559364E-02,1.446092E-02,7.591844E-03,3.672898E-03
+84.00000,28.00000,0.00000,9.992914E-01,9.979122E-01,9.944422E-01,9.866457E-01,9.710339E-01,9.431789E-01,8.988099E-01,8.354525E-01,7.538353E-01,6.582218E-01,5.554098E-01,4.529269E-01,3.573125E-01,2.731076E-01,2.026328E-01,1.462850E-01,1.030472E-01,7.103509E-02,4.800481E-02,3.177303E-02,2.049249E-02,1.275969E-02,7.575691E-03,4.231393E-03,2.195120E-03
